2024-01-31_jtbank_git/argocd-apps-with-branches-example/overlays/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jt
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jt.k8s.sikademo.com
      secretName: jt-tls
  rules:
    - host: jt.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jt
                port:
                  number: 80
